--- a/KeysServer.ini
+++ b/KeysServer.ini
@@ -3,6 +3,6 @@ DO_GZIP_RESPONSE = True
 PORT=50000
 
 LOG_FILE = /var/log/oasis/keys_server.log
-LOG_LEVEL = DEBUG
-LOG_MAX_SIZE_IN_BYTES=1000000
+LOG_LEVEL = INFO
+LOG_MAX_SIZE_IN_BYTES=10000000
 LOG_BACKUP_COUNT = 5
