--- a/KeysServer.ini
+++ b/KeysServer.ini
@@ -1,10 +1,8 @@
 [Default]
-DO_GZIP_RESPONSE=True
+DO_GZIP_RESPONSE = True
 PORT=50000
 
-LOG_FILE=/var/log/oasis/keys_server.log
-LOG_LEVEL=INFO
+LOG_FILE = /var/log/oasis/keys_server.log
+LOG_LEVEL = INFO
 LOG_MAX_SIZE_IN_BYTES=10000000
-LOG_BACKUP_COUNT=5
-
-RUN_MODE=test
+LOG_BACKUP_COUNT = 5
