--- a/KeysServer.ini
+++ b/KeysServer.ini
@@ -1,8 +1,11 @@
 [Default]
-DO_GZIP_RESPONSE = True
-PORT=50000
+DO_GZIP_RESPONSE=True
+PORT=5000
 
-LOG_FILE = /var/log/oasis/keys_server.log
-LOG_LEVEL = INFO
+KEYS_DATA_DIRECTORY=/var/oasis/keys_data 
+
+LOG_DIRECTORY=/var/log
+LOG_FILE=%(LOG_DIRECTORY)/keys_server.log
+LOG_LEVEL=INFO
 LOG_MAX_SIZE_IN_BYTES=10000000
-LOG_BACKUP_COUNT = 5
+LOG_BACKUP_COUNT=5
