--- a/KeysServer.ini
+++ b/KeysServer.ini
@@ -4,7 +4,7 @@ PORT=5000
 
 KEYS_DATA_DIRECTORY=/var/oasis/keys_data 
 
-LOG_DIRECTORY=/var/log
+LOG_DIRECTORY=/var/log/oasis
 LOG_FILE=%(LOG_DIRECTORY)/keys_server.log
 LOG_LEVEL=INFO
 LOG_MAX_SIZE_IN_BYTES=10000000
