Update tests - add keys data path to tests INI template

--- a/tests/KeysServerTests.ini
+++ b/tests/KeysServerTests.ini
@@ -2,6 +2,8 @@
 
 MODEL_VERSION_FILE_PATH=%MODEL_VERSION_FILE_PATH%
 
+KEYS_DATA_PATH=%KEYS_DATA_PATH%
+
 SAMPLE_CSV_MODEL_EXPOSURES_FILE_PATH=%SAMPLE_CSV_MODEL_EXPOSURES_FILE_PATH%
 
 SAMPLE_JSON_MODEL_EXPOSURES_FILE_PATH=%SAMPLE_JSON_MODEL_EXPOSURES_FILE_PATH%
