--- a/apache_config/oasis.conf
+++ b/apache_config/oasis.conf
@@ -6,6 +6,7 @@
     WSGIScriptAlias / /var/www/oasis/oasis.wsgi process-group=piwind-keys-server application-group=%{GLOBAL}
     ErrorLog ${APACHE_LOG_DIR}/error.log
     LogLevel warn
+    Timeout 86400
     CustomLog ${APACHE_LOG_DIR}/access.log combined
     <Directory /var/www/oasis/>
         Order allow,deny
