Add new Flask app to handle new lookup class framework + add new WSGI file for new app + update generic keys server INI file

--- a/KeysServer.ini
+++ b/KeysServer.ini
@@ -6,6 +6,17 @@ KEYS_DATA_DIRECTORY=/var/oasis/keys_data
 
 LOG_DIRECTORY=/var/log/oasis
 LOG_FILE=%LOG_DIRECTORY%/keys_server.log
+LOG_FILE_PATH=%%LOG_DIRECTORY%%/keys_server.log
 LOG_LEVEL=INFO
 LOG_MAX_SIZE_IN_BYTES=10000000
 LOG_BACKUP_COUNT=5
+
+AREA_PERILS_FILE=
+VULNERABILITIES_FILE=
+
+[Lookup]
+KEYS_DATA_PATH=/var/oasis/keys_data
+CONFIG_FILE_PATH=%%KEYS_DATA_PATH%%/
+PERIL_AREAS_FILE_PATH=%%KEYS_DATA_PATH%%/
+PERIL_AREAS_RTREE_FILE_INDEX_PATH=%%KEYS_DATA_PATH%%/
+VULNERABILITIES_FILE_PATH=%%KEYS_DATA_PATH%%/
