--- a/apache_config/oasis.conf
+++ b/apache_config/oasis.conf
@@ -1,11 +1,11 @@
 <VirtualHost *:80>
     ServerName localhost
-    WSGIDaemonProcess piwind-keys-server processes=1 threads=1 display-name=mod_wsgi
-    WSGIProcessGroup piwind-keys-server
+    WSGIDaemonProcess keys-server display-name=mod_wsgi
+    WSGIProcessGroup keys-server
     WSGIApplicationGroup %{GLOBAL}
-    WSGIScriptAlias / /var/www/oasis/oasis.wsgi process-group=piwind-keys-server application-group=%{GLOBAL}
+    WSGIScriptAlias / /var/www/oasis/oasis.wsgi process-group=keys-server application-group=%{GLOBAL}
     ErrorLog ${APACHE_LOG_DIR}/error.log
-    LogLevel warn
+    LogLevel debug
     Timeout 86400
     CustomLog ${APACHE_LOG_DIR}/access.log combined
     <Directory /var/www/oasis/>
