Fixes for test ini

--- a/tests/KeysServerTests.ini
+++ b/tests/KeysServerTests.ini
@@ -6,5 +6,5 @@ KEYS_SERVER_PORT=%KEYS_SERVER_PORT%
 
 SAMPLE_CSV_MODEL_EXPOSURES_FILE_PATH=%SAMPLE_CSV_MODEL_EXPOSURES_FILE_PATH%
 SAMPLE_JSON_MODEL_EXPOSURES_FILE_PATH=%SAMPLE_JSON_MODEL_EXPOSURES_FILE_PATH%
-OUTPUT_FILE_PATH=
+OUTPUT_FILE_DIR=
 SKIP_INVALID_TESTS=false
